alvis_code/ProbVLM/src/output_eval_slurm/slurm-3191129.out
This job can be monitored from: https://job.c3se.chalmers.se/alvis/3191129
Lmod has detected the following error: The following module(s) are unknown:
"ftfy"

Please check the spelling or version number. Also try "module spider ..."
It is also possible your cache file is out-of-date; it may help to try:
  $ module --ignore_cache load "ftfy"

Also make sure that all modulefiles written in TCL start with the string
#%Module



  File "/mimer/NOBACKUP/groups/ulio_inverse/UQ/Uncertainty-Quantification-Frozen-Embeddings/alvis_code/ProbVLM/src/uncertainty_estimates.py", line 163
    counter += 1
    ^
IndentationError: expected an indented block after 'if' statement on line 158
